// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Assess and migrate workloads to Azure with migration reports and code conversion. Supports AWS Lambda→Functions, K8s→Container Apps, Cloud Run→Container Apps. WHEN: migrate Lambda to Functions, AWS to Azure, Lambda assessment, serverless to Azure, migrate from AWS, from GCP, Cloud Run to Container Apps, Kubernetes to Container Apps, k8s to ACA, GKE to Azure, EKS to Container Apps.",
  "extractedKeywords": [
    "apps",
    "assess",
    "assessment",
    "azure",
    "cloud",
    "code",
    "container",
    "conversion",
    "deploy",
    "from",
    "function",
    "functions",
    "kubernetes",
    "lambda",
    "mcp",
    "migrate",
    "migration",
    "reports",
    "serverless",
    "supports",
    "when",
    "with",
    "workloads",
  ],
  "name": "azure-cloud-migrate",
}
`;

exports[`azure-cloud-migrate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "apps",
  "assess",
  "assessment",
  "azure",
  "cloud",
  "code",
  "container",
  "conversion",
  "deploy",
  "from",
  "function",
  "functions",
  "kubernetes",
  "lambda",
  "mcp",
  "migrate",
  "migration",
  "reports",
  "serverless",
  "supports",
  "when",
  "with",
  "workloads",
]
`;
